--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
+<Abraham></Abraham>
 
-<h2>Nombre: {{nombre}} </h2>
-<h2>edad: {{edad}} </h2>
-<h2>estatura: {{estatura}} </h2>
-<h2>estadocivil: {{estadocivil}} </h2>
 <button mat-flat-button color="primary">Regresar</button>
