--- a/src/app/abraham/abraham.component.html
+++ b/src/app/abraham/abraham.component.html
@@ -1,2 +1,18 @@
-<p>abraham works!</p>
-<h2>Como estas {{nombre}} </h2>
+<h1>Datos Personales</h1> 
+<div class="caja">
+    <div id="fondo" class="flex-center">
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="person"></mat-icon>
+    <h2 >Nombre: Abraham</h2> 
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="person"></mat-icon>
+    <h2 id="apellido">Apellido: Torres</h2>
+    <mat-icon>edit</mat-icon>
+    <h2>Rut: 26.589.577-8</h2>
+    <mat-icon>supervisor_account</mat-icon>
+    <h2>Genero:Masculino</h2>
+    <mat-icon>invert_colors</mat-icon>
+    <h2>Grupo Sanguineo: 0+</h2>
+    <mat-icon>calendar_today</mat-icon>
+    <h2>Fecha de Nacimiento:11-08-1993</h2>
+    </div>
+</div>
+
