--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <Abraham></Abraham>
 
-<button mat-flat-button color="primary">Regresar</button>
+<button mat-flat-button color="primary">regresar</button>
